styles.css
body {
  margin: 0;
  padding: 0;
  background-color: #37474F;
  text-align: center;
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 300;
  color: #fafdff;
}

a {
  color: #fafdff;
}

#header {

}

#logo {
  width: 30%;
  height: auto;
  margin-top: 50px;
}

#menu {

}

.menu-item {
  width: 96px;
  height: 96px;
  margin: 8px;
}

#content {

}

.section {
  max-width: 700px;
  border-top: 2px solid #263238;
  min-height: 100px;
  margin: 32px auto;
  padding: 16px;
  text-align: left;
}

.section-icon {
  width: 128px;
  height: 128px;
  float: left;
}

.section-title {
  display: block;
  text-align: left;
  padding: 12px 0;
  margin-left: 140px;
  font-size: 30px;
}

.section-links {
  display: block;
  margin-left: 140px;
  text-align: left;
}

.section-badge {
  width: 128px;
}

.section-description {
  display: inline-block;
  white-space: pre-line;
  text-align: left;
  font-size: 14px;
  padding: 10px;
  margin-bottom: 20px;
}

.section-image {
  display: inline-block;
  width: 250px;
  height: 250px;
}

.section-video {
  display: inline-block;
  width: 360px; /* 16:9 = 444px */
  height: 250px;
}

#footer {
  background-color: #1a2935;
  padding: 20px;
  font-size: 13px;
  margin-top: 50px;
}

